<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94B5E4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- app:layout_constraintBottom_toTopOf="@+id/btn_mail" -->
    <!-- app:layout_constraintTop_toBottomOf="@+id/btn_phone" -->

    <Button
        android:id="@+id/btn_mail"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="#FFF8DC"
        android:backgroundTint="#DEB887"
        android:text="@string/email_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="347dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="#FFF8DC"
        android:backgroundTint="#DEB887"
        android:text="@string/google"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:iconPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mail"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btn_fbk"
        android:layout_width="102dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="204dp"
        android:background="#FFF8DC"
        android:backgroundTint="#DEB887"
        android:text="@string/facebook"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_phone"
        app:rippleColor="#FFFFFF"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/btn_phone"
        android:layout_width="101dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="204dp"
        android:background="@color/cornsink"
        android:backgroundTint="#DEB887"
        android:backgroundTintMode="add"
        android:drawableStart="@drawable/phone_icon"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="179dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_black"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="51dp"
        android:layout_height="82dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_phone"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle"
        app:srcCompat="@drawable/phone_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="65dp"
        android:layout_height="97dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_fbk"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/facebook" />

</androidx.constraintlayout.widget.ConstraintLayout>